--- a/config/legislative.yml
+++ b/config/legislative.yml
@@ -22,15 +22,18 @@ production:
   bill_graph_data_length:   '12'
   bill_graph_day_interval:  '7'
   parliaments_initial_date: '1990-03-01'
-  billit_url: ~
-  paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
-  popit_url:  ~
+  #billit_url: 
+  billit_url: 'http://parlamentoabierto.org.py:8002/bills/'
+  paperworks_url: 'http://parlamentoabierto.org.py:8002/bills/'
+  popit_url:  'http://popit.parlamentoabierto.org.py:8000/'
   twitter_tags: 'CongresoAbierto'
   twitter_account:  'ciudadanoi'
-  popit_persons:  ~
-  popit_search:   ~
-  popit_organizations: ~
-  popit_organizations_search: ~
+  popit_url:  'parlamento.popit.parlamentoabierto.org.py:8000/api'
+  popit_persons:  'http://parlamento.popit.parlamentoabierto.org.py:8000/api/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
+  popit_search:   ~   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
+  popit_organizations: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
+  popit_organizations_search: ~ #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
+  writeit_base_url: 'http://writeit.parlamentoabierto.org.py:8001'
   writeit_base_url: ~
   writeit_url:      ~
   writeit_username: ~
@@ -81,21 +84,23 @@ development:
   district_weeks_url: ~ # example: 'https://api.morph.io/owner/district_weeks_repo/data.json?query='
   congressmen_helper_url: ~ # example: 'https://api.morph.io/owner/congressmen_helper/data.json?query='
   morph_io_api_key: ~       # for use morph.io API
-  bill_graph_data_length:   '12'   # amount of points in the graph
-  bill_graph_day_interval:  '28'   # amount of days per point in graph
-  parliaments_initial_date: '1990-03-01' # the initial date for bill search purposes
-  billit_url: 'http://billit.ciudadanointeligente.org/bills/'  # example: 'http://billit-instance.org/bills/'; for more info about this POPLUS component check https://github.com/ciudadanointeligente/bill-it
-  paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
-  popit_url:  'localhost:3002/api'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
-  popit_persons:  'http://localhost:3002/api/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
-  popit_search:   ~   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
-  popit_organizations: 'http://localhost:3002/api/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
-  popit_organizations_search: ~ #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
-  writeit_base_url: 'http://localhost:3001' # example: 'http://localhost:3001'; you will need create a instance, please contact with ciudadanointeligente's lab team in lab@ciudadanointeligente.org. http://writeit.ciudadanointeligente.org/
-  writeit_url:      '/api/v1/instance/2/'   # example: '/api/v1/instance/2/'; writeit instance path
-  writeit_username: 'admin' # example: 'admin'; writeit username
-  writeit_api_key:  'a'     # example: 'a'; writeit apikey
-  writeit_messages_per_page: '5'
+  #bill_graph_data_length:   '12'   # amount of points in the graph
+  #bill_graph_day_interval:  '28'   # amount of days per point in graph
+  #parliaments_initial_date: '1990-03-01' # the initial date for bill search purposes
+  #billit_url: 'http://billit.ciudadanointeligente.org/bills/'  # example: 'http://billit-instance.org/bills/'; for more info about this POPLUS component check https://github.com/ciudadanointeligente/bill-it
+  billit_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
+  paperworks_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
+  #paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
+  popit_url:  'parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
+  popit_persons:  'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
+  popit_search:   'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/persons/'   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
+  popit_organizations: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
+  popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/organizations/' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
+  #writeit_base_url: 'http://writeit.parlamentoabierto.org.py:8001' # example: 'http://localhost:3001'; you will need create a instance, please contact with ciudadanointeligente's lab team in lab@ciudadanointeligente.org. http://writeit.ciudadanointeligente.org/
+  #writeit_url:      '/api/v1/instance/1/'   # example: '/api/v1/instance/2/'; writeit instance path
+  #writeit_username: 'admin' # example: 'admin'; writeit username
+  #writeit_api_key:  'a'     # example: 'a'; writeit apikey
+  #writeit_messages_per_page: '5'
   google_site_verification: ''
   component_legislative_agendas:   ~ # to enable this component set a not null value, example: 'true' or '1'
   component_legislative_hot_bills: ~ # to enable this component set a not null value, example: 'true' or '1'
@@ -114,14 +119,14 @@ development:
   smtp_setting_username: ~ #user name
   smtp_setting_password: ~ #password
   preset1: ~    # custom search filters example, up to 9: '["2000-2006 Ricardo Lagos Escobar", "creation_date_min=2000-03-11&creation_date_max=2006-03-10"]'
-  bing_search: ~ # bing webmaster validation
-  twitter_card: ~ #twitter:card
-  twitter_site: ~ #twitter:site
-  twitter_title: ~ #twitter:title
-  twitter_description: ~ #twitter:description
-  twitter_creator: ~ #twitter:creator
-  twitter_image: ~ #twitter:image
-  twitter_domain: ~ #twitter:domain
+  #bing_search: ~ # bing webmaster validation
+  #twitter_card: ~ #twitter:card
+  #twitter_site: ~ #twitter:site
+  #twitter_title: ~ #twitter:title
+  #twitter_description: ~ #twitter:description
+  #twitter_creator: ~ #twitter:creator
+  #twitter_image: ~ #twitter:image
+  #twitter_domain: ~ #twitter:domain
 
 test:
   root_url:  ~
