--- a/config/legislative.yml
+++ b/config/legislative.yml
@@ -88,8 +88,8 @@ development:
   #bill_graph_day_interval:  '28'   # amount of days per point in graph
   #parliaments_initial_date: '1990-03-01' # the initial date for bill search purposes
   #billit_url: 'http://billit.ciudadanointeligente.org/bills/'  # example: 'http://billit-instance.org/bills/'; for more info about this POPLUS component check https://github.com/ciudadanointeligente/bill-it
-  billit_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
-  paperworks_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
+  billit_url: 'http://parlamentoabierto.org.py:8002/bills/'
+  paperworks_url: 'http://parlamentoabierto.org.py:8002/bills/'
   #paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
   popit_url:  'parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
   popit_persons:  'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
