development enviroment pointing to local hosts

--- a/config/legislative.yml
+++ b/config/legislative.yml
@@ -88,14 +88,14 @@ development:
   #bill_graph_day_interval:  '28'   # amount of days per point in graph
   #parliaments_initial_date: '1990-03-01' # the initial date for bill search purposes
   #billit_url: 'http://billit.ciudadanointeligente.org/bills/'  # example: 'http://billit-instance.org/bills/'; for more info about this POPLUS component check https://github.com/ciudadanointeligente/bill-it
-  billit_url: 'http://billit.parlamentoabierto.sinergetica.com:8002/bills/'
-  paperworks_url: 'http://billit.parlamentoabierto.sinergetica.com:8002/bills/'
+  billit_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
+  paperworks_url: 'http://billit.parlamentoabierto.org.py:8002/bills/'
   #paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
-  popit_url:  'parlamento.popit.parlamentoabierto.sinergetica.com:8000/api/v0.1'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
-  popit_persons:  'http://parlamento.popit.parlamentoabierto.sinergetica.com:8000/api/v0.1/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
-  popit_search:   'http://parlamento.popit.parlamentoabierto.sinergetica.com:8000/api/v0.1/search/persons/'   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
-  popit_organizations: 'http://parlamento.popit.parlamentoabierto.sinergetica.com:8000/api/v0.1/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
-  popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.sinergetica.com:8000/api/v0.1/search/organizations/' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
+  popit_url:  'parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
+  popit_persons:  'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
+  popit_search:   'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/persons/'   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
+  popit_organizations: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
+  popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/organizations/' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
   #writeit_base_url: 'http://writeit.parlamentoabierto.sinergetica.com:8001' # example: 'http://localhost:3001'; you will need create a instance, please contact with ciudadanointeligente's lab team in lab@ciudadanointeligente.org. http://writeit.ciudadanointeligente.org/
   #writeit_url:      '/api/v1/instance/1/'   # example: '/api/v1/instance/2/'; writeit instance path
   #writeit_username: 'admin' # example: 'admin'; writeit username
@@ -147,12 +147,12 @@ test:
   bill_graph_data_length:   '12'
   bill_graph_day_interval:  '7'
   parliaments_initial_date: '1990-03-01'
-  billit_url: 'http://localhost:3003/bills/'
-  paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
-  popit_url:  'localhost:3002'
-  popit_persons:  'http://localhost:3002/api/persons/'
-  popit_search:   'http://localhost:3002/api/search/persons?'
-  popit_organizations: 'http://localhost:3002/api/organizations/'
+  billit_url: 'http://billit.parlamentoabierto.org.py:8002/bills/' #'http://localhost:3003/bills/'
+  paperworks_url: 'http://billit.parlamentoabierto.org.py:8002//paperworks/'
+  popit_url:  'popit.parlamentoabierto.org.py:8000'
+  popit_persons:  'http://popit.parlamentoabierto.org.py:8000/api/persons/'
+  popit_search:   'http://popit.parlamentoabierto.org.py:8000/api/search/persons?'
+  popit_organizations: 'http://popit.parlamentoabierto.org.py:8000/api/organizations/'
   popit_organizations_search: ~
   writeit_base_url: 'http://localhost:3001'
   writeit_url:      '/api/v1/instance/1/'
