--- a/config/legislative.yml
+++ b/config/legislative.yml
@@ -93,9 +93,9 @@ development:
   #paperworks_url: 'http://billit.ciudadanointeligente.org/paperworks/'
   popit_url:  'parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1'  # example: 'legislative-instance.popit.mysociety.org'; you will need create a instance, please contact with mysociety's popit team in popit@mysociety.org. http://popit.mysociety.org/instances/new
   popit_persons:  'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/persons/'  # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/persons/'; the same instance used above but with http and person path
-  popit_search:   'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/persons/'   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
+  popit_search:   'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/persons?'   # example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/persons?'; used for person search
   popit_organizations: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
-  popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/organizations/' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
+  popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/organizations?' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
   #writeit_base_url: 'http://writeit.parlamentoabierto.sinergetica.com:8001' # example: 'http://localhost:3001'; you will need create a instance, please contact with ciudadanointeligente's lab team in lab@ciudadanointeligente.org. http://writeit.ciudadanointeligente.org/
   #writeit_url:      '/api/v1/instance/1/'   # example: '/api/v1/instance/2/'; writeit instance path
   #writeit_username: 'admin' # example: 'admin'; writeit username
