modificaciones finales para tedic

--- a/config/legislative.yml
+++ b/config/legislative.yml
@@ -98,9 +98,9 @@ development:
   popit_organizations: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/organizations/'  #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/organizations/'
   popit_organizations_search: 'http://parlamento.popit.parlamentoabierto.org.py:8000/api/v0.1/search/organizations?' #example: 'http://legislative-instance.popit.mysociety.org/api/v0.1/search/organizations?'
   writeit_base_url: 'http://writeit.ciudadanointeligente.org' # example: 'http://localhost:3001'; you will need create a instance, please contact with ciudadanointeligente's lab team in lab@ciudadanointeligente.org. http://writeit.ciudadanointeligente.org/
-  writeit_url:      '/api/v1/instance/1879/'   # example: '/api/v1/instance/2/'; writeit instance path
-  writeit_username: 'demianflorentin' # example: 'admin'; writeit username
-  writeit_api_key:  '760578b2503e745169dfb7456318eb5408b0a68e'     # example: 'a'; writeit apikey
+  writeit_url:      '/api/v1/instance/1877/'   # example: '/api/v1/instance/2/'; writeit instance path
+  writeit_username: 'lupa18' # example: 'admin'; writeit username
+  writeit_api_key:  '5c7dea67d3888a0f7a0c23721d1928f90c5e3043'#'760578b2503e745169dfb7456318eb5408b0a68e'     # example: 'a'; writeit apikey
   writeit_messages_per_page: '5'
   google_site_verification: ''
   component_legislative_agendas:   ~ # to enable this component set a not null value, example: 'true' or '1'
@@ -128,7 +128,7 @@ development:
   #twitter_creator: ~ #twitter:creator
   #twitter_image: ~ #twitter:image
   #twitter_domain: ~ #twitter:domain
-  bill_files_url: 'http://localhost/bills/' 
+  bill_files_url: 'http://archivos.parlamentoabierto.org.py/download/bills/' 
   
 test:
   root_url:  ~
